# Tacomometer

./: .gitignore  DisplayDriver.h  LICENSE  OTA_GUIDE.md  README.md  Tacomometer.ino  generate_assets_v2.py  inclinometer.py  main.py  requirements.txt  test_button.py
ESP32C6 Demo files/: lv_conf.h
ESP32C6 Demo files/01_ADC_Test/: 01_ADC_Test.ino  adc_bsp.cpp  adc_bsp.h  user_app.cpp  user_app.h
ESP32C6 Demo files/02_PCF85063_Test/: 02_PCF85063_Test.ino  rtc_bsp.cpp  rtc_bsp.h
ESP32C6 Demo files/03_QMI8658_Test/: 03_QMI8658_Test.ino  qmi_bsp.cpp  qmi_bsp.h
ESP32C6 Demo files/04_SD_Card/: 04_SD_Card.ino  sdcard_bsp.cpp  sdcard_bsp.h
ESP32C6 Demo files/05_WIFI_AP/: 05_WIFI_AP.ino
ESP32C6 Demo files/06_WIFI_STA/: 06_WIFI_STA.ino
ESP32C6 Demo files/08_Audio_Test/src/codec_board/: .component_hash  CHANGELOG.md  CMakeLists.txt  README.md  board_cfg.h  board_cfg.txt  cfg_parse.c  codec_board.c  codec_board.h  codec_init.c  codec_init.h  dummy_codec.c  dummy_codec.h  idf_component.yml  lcd_init.c
ESP32C6 Demo files/08_Audio_Test/src/codec_board/drv/: tca9554.c  tca9554.h
assets_backup/: README.md  img_background.h  img_pointer.c  img_truck_rear.c  img_truck_side.c
lib/: LCD_1inch28.py  MPU6050.py
old/: README.md  generate_assets.py  generate_assets_v2.py  inclinometer.py  main.py  requirements.txt
old/lib/: LCD_1inch28.py
src/: assets.h  board_config.h  img_background.c  img_pointer.h  img_truck_rear.h  img_truck_side.h  imu_driver.cpp  imu_driver.h  lvgl_port.c  lvgl_port.h  touch_driver.cpp  touch_driver.h  ui.cpp  ui.h  web_server.cpp  web_server.h
(+36 files in other folders)
